# cflow

./: .env.example  .gitignore  README.md  SETUP.md  docker-compose.yml  test-install.sh
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_openspec_tool.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/models/: __init__.py  audit.py  content.py  llm_usage.py  project.py  proposal.py  review.py  user.py
backend/app/routers/: audit.py  auth.py  health.py  projects.py  proposals.py  reviews.py  websocket.py
backend/app/schemas/: auth.py
backend/app/services/: audit.py  content_versioning.py  filesystem.py  iteration.py  openspec_client.py  proposal_generator.py
backend/app/services/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  ollama_provider.py  openai_provider.py  usage_tracker.py  vllm_provider.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py
backend/tests/unit/: test_filesystem.py  test_security.py
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: GenerateProposalsWizard.tsx  Layout.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: AuditLogs.tsx  Login.tsx  ProjectDetail.tsx  Projects.tsx  ProposalDetail.tsx
frontend/src/services/: api.ts
openspec/: project.md
openspec/changes/add-complianceflow-platform/: design.md  proposal.md  (+1 more)
scripts/: setup.sh
(+12 files in other folders)
